<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFEF"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/btnTasks"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTime"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView
            android:id="@+id/ibtnTasks"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:background="@drawable/task_button_selector"
            android:state_selected="true"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/tasks"
            android:textSize="10dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnTime"
        android:layout_width="0dp"

        android:layout_height="60dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/btnTasks"
        app:layout_constraintEnd_toStartOf="@+id/courses"
        app:layout_constraintStart_toEndOf="@+id/btnTasks"
        app:layout_constraintTop_toTopOf="@+id/btnTasks">

        <ImageView
            android:id="@+id/ibtnTime"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/time_table_button_selector"

            android:state_selected="false"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/timetable"
            android:textSize="10dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/courses"
        android:layout_width="0dp"

        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/btnTime"
        app:layout_constraintEnd_toStartOf="@+id/results"
        app:layout_constraintStart_toEndOf="@+id/btnTime"
        app:layout_constraintTop_toTopOf="@+id/btnTime">


        <ImageView
            android:id="@+id/icourses"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:background="@drawable/course_button_selector"
            android:state_selected="false"
            android:text="Courses"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/courses"
            android:textSize="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/results"
        android:layout_width="0dp"

        android:layout_height="0dp"

        android:gravity="center"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="@+id/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/courses"
        app:layout_constraintTop_toTopOf="@+id/courses">


        <ImageView
            android:id="@+id/iresults"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="8dp"

            android:layout_marginRight="8dp"
            android:background="@drawable/result_button_selector"
            android:state_selected="false"
            android:text="Courses"></ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:text="@string/grade"
            android:textSize="10dp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="#B8B8B8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>